--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
     var stripe = Stripe('pk_test_aeUUjYYcx4XNfKVW60pmHTtI'); // use your test publishable key
     var elements = stripe.elements();
   </script>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
