--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,16 @@
     var stripe = Stripe('pk_test_aeUUjYYcx4XNfKVW60pmHTtI'); // use your test publishable key
     var elements = stripe.elements();
   </script>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-156346896-1', 'auto');  // Change the UA-ID to the one you got from Google Analytics
+
+</script>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
